Scrollbar height fix.

--- a/src/assets/styles/custom-scroll.less
+++ b/src/assets/styles/custom-scroll.less
@@ -13,7 +13,9 @@
   }
 
   &#favourite-scroll {
-    bottom: 40px;
+    top: @toolbar-height;
+    bottom: @bottom-tab-height;
+    position: absolute;
   }
 }
 
